# eos-vm

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
.cicd/: docker.sh  pipeline-upload.sh  pipeline.yml
.cicd/metrics/: test-metrics.js
.github/workflows/: main.yml
cmake/: SysVMBuildUtils.cmake  dependencies.cmake  softfloat-install.cmake  target_helpers.cmake
docs/: OVERVIEW.md  aarch64-jit-benchmark-report.md
include/sysio/eosio/vm/: backend.hpp  base_visitor.hpp  bitcode_writer.hpp  constants.hpp  error_codes_def.hpp  exceptions.hpp  execution_context.hpp  execution_interface.hpp  host_function.hpp  opcodes.hpp  opcodes_def.hpp  parser.hpp  profile.hpp  sections.hpp  softfloat.hpp  vector.hpp  wasm_stack.hpp  watchdog.hpp  x86_64.hpp
include/sysio/sysio/vm/: allocator.hpp  config.hpp  debug_info.hpp  disassembly_visitor.hpp  error_codes_def.hpp  exceptions.hpp  execution_context.hpp  function_traits.hpp  interpret_visitor.hpp  leb128.hpp  null_writer.hpp  options.hpp  parser.hpp  stack_elem.hpp  types.hpp  vector.hpp  x86_64.hpp
include/sysio/vm/: aarch64.hpp  allocator.hpp  argument_proxy.hpp  backend.hpp  bitcode_writer.hpp  config.hpp  constants.hpp  debug_visitor.hpp  error_codes.hpp  error_codes_def.hpp  error_codes_pp.hpp  execution_context.hpp  execution_interface.hpp  function_traits.hpp  guarded_ptr.hpp  host_function.hpp  interpret_visitor.hpp  leb128.hpp  memory_dump.hpp  null_writer.hpp  opcodes.hpp  opcodes_def.hpp  options.hpp  parser.hpp  profile.hpp  signals.hpp  softfloat.hpp  span.hpp  types.hpp  utils.hpp  validation.hpp  variant.hpp  vector.hpp  wasm_stack.hpp  watchdog.hpp  x86_64.hpp
tests/: CMakeLists.txt  aarch64_jit_benchmark.cpp  aarch64_jit_tests.cpp  allocator_tests.cpp  allow_code_after_function_end_tests.cpp  allow_invalid_empty_local_set_tests.cpp  allow_u32_limits_flags_tests.cpp  allow_zero_blocktype_tests.cpp  backend_tests.cpp  forbid_export_mutable_globals_tests.cpp  guarded_ptr_tests.cpp  host_functions_tests.cpp  implementation_limits_tests.cpp  instantiation_tests.cpp  main.cpp  max_br_table_elements_tests.cpp  max_code_bytes_tests.cpp  max_func_local_bytes_tests.cpp  max_linear_memory_init_tests.cpp  max_local_sets_tests.cpp  max_memory_offset_tests.cpp  max_mutable_globals_tests.cpp  max_nested_structures_tests.cpp  max_pages_tests.cpp  max_section_elements_tests.cpp  max_table_elements_tests.cpp  null_tests.cpp  parse_tests.cpp  preconditions_tests.cpp  reentry_tests.cpp  signals_tests.cpp  span_tests.cpp  stack_restriction_tests.cpp  sysio_max_nested_structures_tests.cpp  utils.hpp  variant_tests.cpp  varint_tests.cpp  vector_tests.cpp  wasm_config.hpp.in  watchdog_tests.cpp
tests/fuzz/: CMakeLists.txt  fuzz_driver.cpp  fuzz_parser.cpp  test
tests/fuzz/afl_in/: asserter.wasm  eosio.system.wasm  hello.wasm  identity.wasm  proxy.wasm  sysio.sudo.wasm
tests/fuzz/afl_out/queue/: id:000002,orig:asserter.wasm  id:000005,orig:deep_loops_ext_report.wasm  id:000006,orig:dice.wasm  id:000010,orig:eosio.token.wasm  id:000011,orig:exchange.wasm  id:000029,orig:identity.wasm  id:000041,orig:noop.wasm
tests/fuzz/old_afl_out/: .cur_input
tests/fuzz/old_afl_out/queue/: id:000000,orig:sysio.msig.wasm  id:000001,orig:eosio.sudo.wasm  id:000002,orig:eosio.system.wasm
tests/memory_tests/: CMakeLists.txt  growable_allocator_test.cpp
tests/spec/: address_tests.cpp  align_tests.cpp  binary-leb128_tests.cpp  binary_tests.cpp  block_tests.cpp  br_if_tests.cpp  br_table_tests.cpp  br_tests.cpp  break-drop_tests.cpp  call_indirect_tests.cpp  call_tests.cpp  const_tests.cpp  conversions_tests.cpp  custom_tests.cpp  data_tests.cpp  e_block_tests.cpp  e_function_tests.cpp  e_globals_tests.cpp  e_locals_tests.cpp  e_memory_tests.cpp  e_module_tests.cpp  e_table_tests.cpp  elem_tests.cpp  endianness_tests.cpp  f32_bitwise_tests.cpp  f32_cmp_tests.cpp  f32_tests.cpp  f64_bitwise_tests.cpp  f64_cmp_tests.cpp  f64_tests.cpp  fac_tests.cpp  float_exprs_tests.cpp  float_literals_tests.cpp  float_memory_tests.cpp  float_misc_tests.cpp  forward_tests.cpp  func_ptrs_tests.cpp  func_tests.cpp  globals_tests.cpp  i32_tests.cpp  (+33 more)
tests/spec_test_generator/: spec_test_generator.cpp
tools/: CMakeLists.txt  addr2line.cpp  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
